Added logo and index.html page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,39 @@
     <meta charset="UTF-8" />
     <title>Image to PDF Converter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Primary Meta Tags -->
+    <title>Image to PDF Converter | Fast Online JPG/PNG to PDF Tool</title>
+    <meta name="title" content="Image to PDF Converter | Fast Online JPG/PNG to PDF Tool">
+    <meta name="description" content="Convert images to PDF instantly using a fast, secure, and free online tool powered by a Spring Boot REST API hosted on Render. Supports JPG, PNG, BMP, and GIF.">
 
+    <!-- Keywords -->
+    <meta name="keywords" content="image to pdf, jpg to pdf, png to pdf, online pdf converter, free pdf tool, spring boot api, render hosting, edtech-shower, convert image to pdf online">
+
+    <!-- Author -->
+    <meta name="author" content="Pankaj | EdTech Shower">
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Image to PDF Converter | Fast & Free Online Tool">
+    <meta property="og:description" content="Upload an image and convert it to PDF instantly. Powered by a Spring Boot REST API deployed on Render.">
+    <meta property="og:url" content="https://imagetopdf-service-v1.onrender.com/index.html">
+    <meta property="og:image" content="https://imagetopdf-service-v1.onrender.com/EdTech-Shower.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Image to PDF Converter | Free Online Tool">
+    <meta name="twitter:description" content="Convert JPG/PNG images to PDF instantly using a fast Spring Boot API. No signup required.">
+    <meta name="twitter:image" content="https://imagetopdf-service-v1.onrender.com/EdTech-Shower.png">
+
+    <!-- Mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Theme Color (nice for mobile browsers) -->
+    <meta name="theme-color" content="#0f172a">
     <style>
         :root {
           --bg: #0f172a;
@@ -399,6 +431,35 @@
           border-radius: 999px;
           background: #22c55e;
         }
+
+        footer {
+      position: sticky;
+      bottom: 0;
+      width: 100%;
+      padding: 22px 0;
+      text-align: center;
+      font-size: 12px;
+      color: #9ca3af;
+      border-top: 1px solid rgba(148, 163, 184, 0.25);
+      background: radial-gradient(circle at top, rgba(15, 23, 42, 0.65), rgba(2, 6, 23, 0.92));
+      backdrop-filter: blur(8px);
+      border-radius: 18px 18px 0 0;
+      box-shadow: 0 -8px 25px rgba(0,0,0,0.35);
+    }
+
+    footer .icons {
+      display: flex;
+      justify-content: center;
+      gap: 22px;
+      margin-top: 8px;
+    }
+
+    footer a {
+      color: #9ca3af;
+      text-decoration: none;
+    }
+
+
     </style>
 </head>
 <body>
@@ -507,6 +568,53 @@
                 Tip: You can change the API URL above to test different environments (local, staging, Render, etc.).
             </div>
         </div>
+        <footer style="
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  margin-top: 40px;
+  padding: 22px 0;
+  text-align: center;
+  font-size: 12px;
+  color: #9ca3af;
+  border-top: 1px solid rgba(148, 163, 184, 0.25);
+  background: radial-gradient(circle at top, rgba(15, 23, 42, 0.65), rgba(2, 6, 23, 0.92));
+  backdrop-filter: blur(8px);
+  border-radius: 18px 18px 0 0;
+  box-shadow: 0 -8px 25px rgba(0,0,0,0.35);
+">
+            <div style="margin-bottom: 10px;">
+                © 2025 · All Rights Reserved · YouTube:
+                <strong style="color:#38bdf8;">@edtech-shower</strong>
+            </div>
+
+            <div style="display: flex; justify-content: center; gap: 22px; margin-top: 8px;">
+
+                <!-- GitHub -->
+                <a href="https://github.com/voiceofpanky" target="_blank" style="color:#9ca3af; text-decoration:none;">
+                    <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 .5C5.65.5.5 5.65.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2c-3.2.7-3.9-1.4-3.9-1.4-.5-1.2-1.2-1.6-1.2-1.6-1-.7.1-.7.1-.7 1.1.1 1.7 1.2 1.7 1.2 1 .1.7 2.2 2.9 2.2 1.4 0 2.3-.7 2.7-1.4-2.6-.3-5.3-1.3-5.3-5.8 0-1.3.5-2.4 1.2-3.3-.1-.3-.5-1.5.1-3.1 0 0 1-.3 3.3 1.2a11.3 11.3 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8.1 3.1.8.9 1.2 2 1.2 3.3 0 4.5-2.7 5.5-5.3 5.8.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A11.5 11.5 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5z"/>
+                    </svg>
+                </a>
+
+                <!-- LinkedIn -->
+                <a href="https://linkedin.com/in/pankajsao" target="_blank" style="color:#9ca3af; text-decoration:none;">
+                    <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M4.98 3.5A2.5 2.5 0 1 1 5 8.5a2.5 2.5 0 0 1-.02-5zM3 9h4v12H3zm7 0h3.8v1.7h.1c.5-.9 1.8-1.9 3.7-1.9 4 0 4.7 2.6 4.7 6v6.2h-4V16c0-1.4 0-3.2-2-3.2s-2.3 1.5-2.3 3.1v5.1h-4z"/>
+                    </svg>
+                </a>
+
+                <!-- YouTube -->
+                <a href="https://youtube.com/@edtech-shower" target="_blank" style="color:#9ca3af; text-decoration:none;">
+                    <svg width="26" height="26" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M23.5 6.2s-.2-1.7-.9-2.4c-.9-.9-1.9-.9-2.4-1C16.8 2.5 12 2.5 12 2.5h-.1s-4.8 0-8.2.3c-.5.1-1.5.1-2.4 1-.7.7-.9 2.4-.9 2.4S0 8.2 0 10.2v1.6c0 2 .2 4 .2 4s.2 1.7.9 2.4c.9.9 2.1.9 2.6 1 1.9.2 8.1.3 8.1.3s4.8 0 8.2-.3c.5-.1 1.5-.1 2.4-1 .7-.7.9-2.4.9-2.4s.2-2 .2-4v-1.6c0-2-.2-4-.2-4zM9.7 14.7V8.8l6.3 2.9-6.3 3z"/>
+                    </svg>
+                </a>
+
+            </div>
+        </footer>
+
+
     </div>
 </div>
 
@@ -652,5 +760,10 @@
 
     checkHealth();
 </script>
+
 </body>
+
+
 </html>
+
+
