added google meta tags

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
     <title>Image to PDF Converter | Fast Online JPG/PNG to PDF Tool</title>
     <meta name="title" content="Image to PDF Converter | Fast Online JPG/PNG to PDF Tool">
     <meta name="description" content="Convert images to PDF instantly using a fast, secure, and free online tool powered by a Spring Boot REST API hosted on Render. Supports JPG, PNG, BMP, and GIF.">
-
+    <meta name="google-site-verification" content="y11ZfCtNO7hogyw6gZA2GkcRWvN4X_8zVStGJbh7k5k" />
     <!-- Keywords -->
     <meta name="keywords" content="image to pdf, jpg to pdf, png to pdf, online pdf converter, free pdf tool, spring boot api, render hosting, edtech-shower, convert image to pdf online">
 
